[gd_scene load_steps=9 format=3 uid="uid://ltaq5rfovw01"]

[ext_resource type="Script" uid="uid://d3nbqvdqfxw1t" path="res://assets/scenes/tab_detail_screen.gd" id="1_51acf"]
[ext_resource type="StyleBox" uid="uid://bl8q0bl6p5l3o" path="res://assets/form_panel_stylebox.tres" id="3_mckc1"]
[ext_resource type="Script" uid="uid://dhx8ks4v0y8lb" path="res://assets/scenes/add_purchase_view.gd" id="4_cmib0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rp74m"]

[sub_resource type="Animation" id="Animation_hu2t3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AddPurchaseView:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1920)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScreenFade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_51acf"]
resource_name = "hide_add_purchase_view"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AddPurchaseView:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 640), Vector2(0, 1920)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScreenFade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cwtmv"]
resource_name = "show_add_purchase_view"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AddPurchaseView:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 1920), Vector2(0, 640)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScreenFade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hu2t3"]
_data = {
&"RESET": SubResource("Animation_hu2t3"),
&"hide_add_purchase_view": SubResource("Animation_51acf"),
&"show_add_purchase_view": SubResource("Animation_cwtmv")
}

[node name="TabDetailScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51acf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.968627, 1, 1)

[node name="TabDetailView" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="TabDetailView"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="HBoxContainer" type="HBoxContainer" parent="TabDetailView/VBoxContainer"]
layout_mode = 2

[node name="TabName" type="Label" parent="TabDetailView/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "Tab Name"

[node name="Back" type="Button" parent="TabDetailView/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.741176, 0.835294, 0.917647, 1)
theme_override_colors/font_color = Color(0.486275, 0.635294, 0.85098, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Back"
flat = true

[node name="MemberContainer" type="MarginContainer" parent="TabDetailView/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 256

[node name="MemberList" type="VBoxContainer" parent="TabDetailView/VBoxContainer/MemberContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="TabDetailView/VBoxContainer/MemberContainer/MemberList"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "Members"

[node name="HistoryContainer" type="MarginContainer" parent="TabDetailView/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 256

[node name="HistoryList" type="VBoxContainer" parent="TabDetailView/VBoxContainer/HistoryContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="TabDetailView/VBoxContainer/HistoryContainer/HistoryList"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Recent Purchases"

[node name="HSeparator" type="HSeparator" parent="TabDetailView/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_rp74m")

[node name="AddPurchase" type="Button" parent="TabDetailView"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.5168, 0.8, 0.512, 1)
theme_override_colors/font_color = Color(0.356863, 0.54902, 0.352941, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Add Purchase"
flat = true

[node name="ScreenFade" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.301961)

[node name="AddPurchaseView" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1920.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_mckc1")
script = ExtResource("4_cmib0")

[node name="MarginContainer" type="MarginContainer" parent="AddPurchaseView"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="AddPurchaseView/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="MarginContainer" type="MarginContainer" parent="AddPurchaseView/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AddPurchaseView/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AddPurchaseView/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "New Purchase"

[node name="Autofill" type="Button" parent="AddPurchaseView/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.741176, 0.835294, 0.917647, 1)
theme_override_colors/font_color = Color(0.486275, 0.635294, 0.85098, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Autofill"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="AddPurchaseView/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 128

[node name="InputFields" type="VBoxContainer" parent="AddPurchaseView/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Buttons" type="HBoxContainer" parent="AddPurchaseView/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Cancel" type="Button" parent="AddPurchaseView/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 0.561333, 0.53, 1)
theme_override_colors/font_color = Color(0.996078, 0.372549, 0.333333, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Cancel"
flat = true

[node name="Submit" type="Button" parent="AddPurchaseView/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.5358, 0.76, 0.532, 1)
theme_override_colors/font_color = Color(0.356863, 0.54902, 0.352941, 1)
theme_override_colors/font_pressed_color = Color(0.286275, 0.345098, 0.403922, 1)
theme_override_font_sizes/font_size = 36
text = "Submit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hu2t3")
}
